--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+main{
+	height: 150px;
+	background-color:#000000;
+}
+.hello-accio{
+	text-color: white (#ffffff);
+left-margin: 32px;
+padding: 10px;
+}
